Fix body scrollbar

--- a/app/global.scss
+++ b/app/global.scss
@@ -6,14 +6,13 @@ a {
 html, body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: 100vh;
   width: 100%;
-  overflow: visible;
-  overflow-x: hidden;
 }
 
 body {
-  overflow: visible;
+  overflow-y: scroll;
 }
 
 
